# hexlet-flask-example

./: Makefile  README.md  example.py  pyproject.toml  test.py
CRUD/: config_connect.json  crud_utils.py  db_util.py  deleter.py  getter.py  saver.py  updator.py  validator.py
my_site/: constants.py  example.py
my_site/CRUD/: crud_utils.py  db_util.py
my_site/auth/: auth.py
my_site/auth/templates/auth/: index.html
my_site/home/: home.py
my_site/home/templates/home/: home.html
my_site/scripts/: example.py
my_site/templates/: home.html  index.html
my_site/templates/courses/: index.html
my_site/templates/users/: new.html  page_not_found.html  settings.html
my_site/users/: users.py
my_site/users/templates/users/: edit.html  new.html  page_not_found.html  settings.html  users.html
my_site/validation/: validator.py
resurses/: user_bd.json
templates/: home.html  index.html
templates/courses/: layout.html
templates/users/: delete.html  edit.html  index copy.html  index.html  new.html  show.html
validation/: validator.py
